--- a/Lezioni/7_Lezione 19_11_2024/CSS/style2.css
+++ b/Lezioni/7_Lezione 19_11_2024/CSS/style2.css
@@ -1,12 +1,25 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: arial, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-  transition: backroud-color 0.5s;
+  transition: background-color 0.5;
 }
-
 .container {
+  text-align: center;
+}
+button {
+  padding: 15px 0px;
+  font-size: 18px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+button:hover {
+  background-color: #45a049;
 }
