--- a/Esercizio/style.css
+++ b/Esercizio/style.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: rgb(216, 216, 51);
 }
 
 .container {
@@ -49,17 +49,17 @@ button {
 }
 
 button#addButton {
-  background-color: #4caf50;
+  background-color: orange;
   color: white;
 }
 
 button#clearButton {
-  background-color: #f44336;
+  background-color: darkgoldenrod;
   color: white;
 }
 
 button#removeListButton {
-  background-color: #2196f3;
+  background-color: orangered;
   color: white;
 }
 
@@ -79,7 +79,6 @@ li {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #f0f0f0;
   margin: 5px 0;
   border-radius: 5px;
   position: relative;
@@ -125,4 +124,9 @@ ul#dynamicList li:nth-child(3n) {
   justify-content: center;
   gap: 10px;
   margin-top: 20px;
+}
+
+input:hover,
+button:hover {
+  transform: scale(1.05);
 }
